--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="HandheldFriendly" content="true">
 
-    <link rel="stylesheet" type="text/css" href="./Livescribe Player_files/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
@@ -29,79 +29,79 @@
     <!--<script type="text/javascript" src="../scripts/player/com/plugins/jquery.google.fastbutton.js"></script>-->
     <!--<script type="text/javascript" src="../scripts/player/com/plugins/jquery.touchSwipe.js"></script>
 	    <script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/audio/WebAudio.js"></script>-->
-    <script type="text/javascript" src="./Livescribe Player_files/Collections.NamedList.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/EventHandling.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/CustomEventHandling.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Animation.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Animations.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/KeyFrameAnimation.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Base64Decoder.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inflate.min.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/BinaryReader.js"></script>
+    <script type="text/javascript" src="./assets/Collections.NamedList.js"></script>
+    <script type="text/javascript" src="./assets/EventHandling.js"></script>
+    <script type="text/javascript" src="./assets/CustomEventHandling.js"></script>
+    <script type="text/javascript" src="./assets/Animation.js"></script>
+    <script type="text/javascript" src="./assets/Animations.js"></script>
+    <script type="text/javascript" src="./assets/KeyFrameAnimation.js"></script>
+    <script type="text/javascript" src="./assets/Base64Decoder.js"></script>
+    <script type="text/javascript" src="./assets/inflate.min.js"></script>
+    <script type="text/javascript" src="./assets/BinaryReader.js"></script>
     <!--        <script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/utility/Callback.js"></script>
 	    <script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/utility/CanvasProgressBar.js"></script>-->
-    <script type="text/javascript" src="./Livescribe Player_files/Utility.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/EnvironmentManager.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/MipMap.js"></script>
+    <script type="text/javascript" src="./assets/Utility.js"></script>
+    <script type="text/javascript" src="./assets/EnvironmentManager.js"></script>
+    <script type="text/javascript" src="./assets/MipMap.js"></script>
     <!--        <script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/utility/RESTDictionaryLoader.js"></script>
         <script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/utility/StrokeRenderer.js"></script>-->
-    <script type="text/javascript" src="./Livescribe Player_files/WebContext.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/EnvironmentManager(1).js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/LocalFileLoader.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/RequestManager.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusCatalog.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusAudioCatalog.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusAssetBase.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusImage.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusInkML.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusAudioStream.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusDocument.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusPage.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusSession.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PDFPlusDocumentParser.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLInkSourceData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLImageData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLAudioData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLTraceData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLDocument.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/inkMLParser.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/StrokeMLData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/StrokeMLParser.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/AudioMLParser.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Local.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Point.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Stroke.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/StrokeCollection.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Session.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/StrokeSession.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/AudioSession.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PageInstance.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PageTemplate.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PageImage.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PencastData.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PencastBase.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/LocalPDFPencast.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/RemoteClassicPencast.js"></script>
+    <script type="text/javascript" src="./assets/WebContext.js"></script>
+    <script type="text/javascript" src="./assets/EnvironmentManager(1).js"></script>
+    <script type="text/javascript" src="./assets/LocalFileLoader.js"></script>
+    <script type="text/javascript" src="./assets/RequestManager.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusCatalog.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusAudioCatalog.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusAssetBase.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusImage.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusInkML.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusAudioStream.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusDocument.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusPage.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusSession.js"></script>
+    <script type="text/javascript" src="./assets/PDFPlusDocumentParser.js"></script>
+    <script type="text/javascript" src="./assets/inkMLInkSourceData.js"></script>
+    <script type="text/javascript" src="./assets/inkMLImageData.js"></script>
+    <script type="text/javascript" src="./assets/inkMLAudioData.js"></script>
+    <script type="text/javascript" src="./assets/inkMLTraceData.js"></script>
+    <script type="text/javascript" src="./assets/inkMLDocument.js"></script>
+    <script type="text/javascript" src="./assets/inkMLParser.js"></script>
+    <script type="text/javascript" src="./assets/StrokeMLData.js"></script>
+    <script type="text/javascript" src="./assets/StrokeMLParser.js"></script>
+    <script type="text/javascript" src="./assets/AudioMLParser.js"></script>
+    <script type="text/javascript" src="./assets/Local.js"></script>
+    <script type="text/javascript" src="./assets/Point.js"></script>
+    <script type="text/javascript" src="./assets/Stroke.js"></script>
+    <script type="text/javascript" src="./assets/StrokeCollection.js"></script>
+    <script type="text/javascript" src="./assets/Session.js"></script>
+    <script type="text/javascript" src="./assets/StrokeSession.js"></script>
+    <script type="text/javascript" src="./assets/AudioSession.js"></script>
+    <script type="text/javascript" src="./assets/PageInstance.js"></script>
+    <script type="text/javascript" src="./assets/PageTemplate.js"></script>
+    <script type="text/javascript" src="./assets/PageImage.js"></script>
+    <script type="text/javascript" src="./assets/PencastData.js"></script>
+    <script type="text/javascript" src="./assets/PencastBase.js"></script>
+    <script type="text/javascript" src="./assets/LocalPDFPencast.js"></script>
+    <script type="text/javascript" src="./assets/RemoteClassicPencast.js"></script>
     <!--<script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/pencastplayer/RemotePDFPencast.js"></script> -->
-    <script type="text/javascript" src="./Livescribe Player_files/LaunchInstructions.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Trigger.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Modal.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/TrayControl.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/ColorPicker.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Button.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/SettingsToggle.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Panel.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/LaunchMessage.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Slider.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/KeyControls.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/CanvasControl.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PageIndicator.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/PlaybackProgressIndicator.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Audio.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/AudioPlayer.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/WebAudioPlayer.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/translate.js"></script>
-    <script type="text/javascript" src="./Livescribe Player_files/Player.js"></script>
+    <script type="text/javascript" src="./assets/LaunchInstructions.js"></script>
+    <script type="text/javascript" src="./assets/Trigger.js"></script>
+    <script type="text/javascript" src="./assets/Modal.js"></script>
+    <script type="text/javascript" src="./assets/TrayControl.js"></script>
+    <script type="text/javascript" src="./assets/ColorPicker.js"></script>
+    <script type="text/javascript" src="./assets/Button.js"></script>
+    <script type="text/javascript" src="./assets/SettingsToggle.js"></script>
+    <script type="text/javascript" src="./assets/Panel.js"></script>
+    <script type="text/javascript" src="./assets/LaunchMessage.js"></script>
+    <script type="text/javascript" src="./assets/Slider.js"></script>
+    <script type="text/javascript" src="./assets/KeyControls.js"></script>
+    <script type="text/javascript" src="./assets/CanvasControl.js"></script>
+    <script type="text/javascript" src="./assets/PageIndicator.js"></script>
+    <script type="text/javascript" src="./assets/PlaybackProgressIndicator.js"></script>
+    <script type="text/javascript" src="./assets/Audio.js"></script>
+    <script type="text/javascript" src="./assets/AudioPlayer.js"></script>
+    <script type="text/javascript" src="./assets/WebAudioPlayer.js"></script>
+    <script type="text/javascript" src="./assets/translate.js"></script>
+    <script type="text/javascript" src="./assets/Player.js"></script>
     <!--<script type="text/javascript" src="../scripts/player/PlayerMain.js"></script>-->
     <!--<script type="text/javascript" src="../scripts/player/com/livescribe/lsnotes/pencastplayer/Document.js"></script>-->
     <!--<script type="text/javascript" src="../scripts/player/com/plugins/jquery-1.7-externs.js"></script>-->
@@ -176,11 +176,12 @@
     <div id="mSettingsButton" class="active" style="display: none;">
     </div>
     <!-- Settings Button End  -->
-    
-    
+
+
     <!-- Settings Controls Start  -->
     <div id="mSettings" class="noselect" style="background-position: left top; display: none">
-        <a id="release-notes" target="_blank" href="https://www.livescribe.com/en-us/releasenotes/index.html#Player">About
+        <a id="release-notes" target="_blank"
+            href="https://www.livescribe.com/en-us/releasenotes/index.html#Player">About
             Livescribe Player Beta</a>
         <hr align="left">
         <input id="mPreviewStroke" name="mPreviewStroke" checked="checked" type="checkbox" value="PreviewStroke"
@@ -329,8 +330,7 @@
             <div id="header">
                 <pre></pre>
             </div>
-            <img id="mBackground" alt="Background Image"
-                src="./Livescribe Player_files/images/ls_player_load_screen_2014.gif">
+            <img id="mBackground" alt="Background Image" src="./assets/images/ls_player_load_screen_2014.gif">
             <p id="overlayBodyText"></p>
             <div id="footer">
                 <pre></pre>
@@ -346,7 +346,7 @@
         <div id="alert-anchor">
             <div id="alert" class="message-container">This player can only load PDFs created by Livescribe. Please
                 select a Livescribe PDF.</div>
-            <img class="close_button" src="./Livescribe Player_files/images/close_button.jpg">
+            <img class="close_button" src="./assets/images/close_button.jpg">
         </div>
     </div>
 
